syntax = "proto3";

option csharp_namespace = "MicroZen.Grpc.Entities";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";

package MicroZen.Grpc.Entities;

// The OrganizationUsers service definition.
service OrganizationUsers {
  // Get all users in an organization.
  rpc GetOrganizationUsers(GetOrganizationUsersRequest) returns (GetOrganizationUsersResponse) {
    option (google.api.http) = {
      get: "/api/v1/users/organization/{organizationId}"
    };
  };
  // Create a user in an organization.
  rpc CreateOrganizationUser(CreateOrganizationUserRequest) returns (OrganizationUserMessage) {
    option (google.api.http) = {
      post: "/api/v1/users/organization"
      body: "*"
    };
  };
  // Update a user in an organization.
  rpc UpdateOrganizationUser(OrganizationUserMessage) returns (OrganizationUserMessage) {
    option (google.api.http) = {
      put: "/api/v1/users/organization"
      body: "*"
    };
  };
  // Remove a user from an organization.
  rpc RemoveOrganizationUser(RemoveOrganizationUserRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/api/v1/users/organization/{userId}"
    };
  };
}

// The request message containing the user's organization ID.
message GetOrganizationUsersRequest {
  // The organization ID.
  int32 organizationId = 1;
}

// The response message containing the users in the organization.
message GetOrganizationUsersResponse {
  // The users in the organization.
  repeated OrganizationUserMessage users = 1;
}

message CreateOrganizationUserRequest {
  string user_id = 1;
  int32 organizationId = 2;
  string email = 3;
  google.protobuf.StringValue firstName = 4;
  google.protobuf.StringValue lastName = 5;
}

message RemoveOrganizationUserRequest {
  string userId = 1;
  int32 organizationId = 2;
}

// The user in an organization.
message OrganizationUserMessage {
  // The user ID.
  int32 id = 1;
  // The user's external system Id (assumes GUID type ID, but can accomodate int32 type through string conversion).
  string userId = 2;
  // The user's first name (optional).
  google.protobuf.StringValue firstName = 3;
  // The user's last name (optional).
  google.protobuf.StringValue lastName = 4;
  // The user's email address.
  string email = 5;
  // The organization ID.
  int32 organizationId = 6;
  // The organization name.
  string organizationName = 7;
}
